0.0.45_1 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Indent JOIN and ON statements by two spaces.

    Bug Fixes:
        - None.

    Dependencies:
        - Don't use "//" for perl 5.6 support

0.0.44 (2016-05-20)

    Bug Fixes:
        - Don't index new non-public packages
        - Fix Deploy under App::staticperl builds

0.0.42 (2016-02-29)

    New Features:
        - New throw_error() method for overriding database errors

    Enhancements:
        - Ignore { col => [] } constructs

    Bug Fixes:
        - Only test with DBD::SQLite as DBD::DBM is fragile

0.0.41_1 (2015-12-28)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Major refactoring

    Bug Fixes:
        - None.

0.0.40 (2015-06-26)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Support use of >, >=, < and <= in WHERE/ON conditions.

    Bug Fixes:
        - None.

0.0.38 (2015-06-24)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - NULL conditions in WHERE statements would cause any following
          values to also be NULL.

0.0.36 (2015-06-19)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Upgrade included Module::Install to 1.16

    Bug Fixes:
        - None.

0.0.34 (2015-06-16)

    API / Behaviour Changes:
        - None.

    New Features:
        - New "log_warn" method for "warn"ing output of statements.
          This will be used by DBIx::ThinSQL::SQLite.

    Enhancements:
        - Move driver modules into seperate files (thanks to reneeb via
          CPAN Challenge).
        - Fleshed out the TODO file.
        - Cleaned up share directory handling
        - New development branch naming scheme documented in